--- a/docs/security.adoc
+++ b/docs/security.adoc
@@ -1,7 +1,7 @@
 = Securing Quarkus APIs
 :experimental:
 
-Bearer Token Authorization is the process of authorizing HTTP requests based on the existence and validity of a bearer token representing a subject and her access context, where the token provides valuable information to determine the subject of the call as well whether or not a HTTP resource can be accessed. This is commonly used in OAuth-based identity and access management systems like https://keycloak.org[Keycloak,window=blank], a popular open source project. In this exercise we'll show you how to use https://github.com/eclipse/microprofile-jwt-auth/releases/download/1.1.1/microprofile-jwt-auth-spec.pdf[Microprofile JSON Web Token (JWT) RBAC,window=blank], https://keyloak.org[Keycloak,window=blank] and https://en.wikipedia.org/wiki/OAuth[OAuth,window=blank] to secure your Quarkus applications.
+Bearer Token Authorization is the process of authorizing HTTP requests based on the existence and validity of a bearer token representing a subject and her access context, where the token provides valuable information to determine the subject of the call as well whether or not a HTTP resource can be accessed. This is commonly used in OAuth-based identity and access management systems like https://keycloak.org[Keycloak^], a popular open source project. In this exercise we'll show you how to use https://github.com/eclipse/microprofile-jwt-auth/releases/download/1.1.1/microprofile-jwt-auth-spec.pdf[Microprofile JSON Web Token (JWT) RBAC^], https://keyloak.org[Keycloak^] and https://en.wikipedia.org/wiki/OAuth[OAuth^] to secure your Quarkus applications.
 
 == Add JWT to Quarkus
 
@@ -222,7 +222,7 @@ Alice is not an admin. Let's try with admin!
 
 [WARNING]
 ====
-Access Tokens have a defined lifespan that's typically short (e.g. 5 minutes), so if you wait too long, the token will expire and you'll get denied access. In this case, just re-fetch a new token using the same `curl` command used the first time. Full-fledged applications can take advantage of things like https://oauth.net/2/grant-types/refresh-token/[_Refresh Tokens_,window=blank] to do this automatically to ensure a good user experience even for slow users.
+Access Tokens have a defined lifespan that's typically short (e.g. 5 minutes), so if you wait too long, the token will expire and you'll get denied access. In this case, just re-fetch a new token using the same `curl` command used the first time. Full-fledged applications can take advantage of things like https://oauth.net/2/grant-types/refresh-token/[_Refresh Tokens_^] to do this automatically to ensure a good user experience even for slow users.
 ====
 
 === Test Admin
@@ -310,7 +310,7 @@ quarkus.keycloak.policy-enforcer.paths.live.path=/health/live
 quarkus.keycloak.policy-enforcer.paths.live.enforcement-mode=DISABLED
 ----
 
-This configures the extension with the necessary configuration ( https://www.keycloak.org/docs/latest/securing_apps/index.html#_java_adapter_config[read more,window=blank] about what these do).
+This configures the extension with the necessary configuration ( https://www.keycloak.org/docs/latest/securing_apps/index.html#_java_adapter_config[read more^] about what these do).
 
 [NOTE]
 ====
@@ -381,7 +381,7 @@ The `/secured/confidential` endpoint is protected with a policy defined in the K
 
 [NOTE]
 ====
-Keycloak caches the resource paths that it is protecting, so that every access doesn't cause a roundtrip back to the server to check whether the user is authorized to access the resource. The lifespan of these cached entries can be controlled through https://www.keycloak.org/docs/latest/authorization_services/index.html#_enforcer_filter[Policy Enforcer Configuration,window=blank].
+Keycloak caches the resource paths that it is protecting, so that every access doesn't cause a roundtrip back to the server to check whether the user is authorized to access the resource. The lifespan of these cached entries can be controlled through https://www.keycloak.org/docs/latest/authorization_services/index.html#_enforcer_filter[Policy Enforcer Configuration^].
 ====
 
 First make sure even `admin` can't access the endpoint:
